--- a/tutorial/html/configureMlr/index.html
+++ b/tutorial/html/configureMlr/index.html
@@ -300,6 +300,9 @@ r = resample(&quot;classif.ksvm&quot;, iris.task, rdesc)
 #&gt; $on.learner.warning
 #&gt; [1] &quot;warn&quot;
 #&gt; 
+#&gt; $on.par.out.of.bounds
+#&gt; [1] &quot;stop&quot;
+#&gt; 
 #&gt; $on.par.without.desc
 #&gt; [1] &quot;stop&quot;
 #&gt; 
@@ -319,14 +322,14 @@ But until then you can turn off <a href="http://www.rdocumentation.org/packages/
 <pre><code class="r">lrn = makeLearner(&quot;classif.ksvm&quot;, newPar = 3)
 </code></pre>
 
-<pre><code>#&gt; Error in setHyperPars2.Learner(learner, insert(par.vals, args)): classif.ksvm: Setting parameter newPar without available description object!
+<pre><code>#&gt; Error: classif.ksvm: Setting parameter newPar without available description object!
 #&gt; You can switch off this check by using configureMlr!
 </code></pre>
 
 <pre><code class="r">lrn = makeLearner(&quot;classif.ksvm&quot;, epsilon = -3)
 </code></pre>
 
-<pre><code>#&gt; Error in setHyperPars2.Learner(learner, insert(par.vals, args)): classif.ksvm: Setting parameter epsilon without available description object!
+<pre><code>#&gt; Error: classif.ksvm: Setting parameter epsilon without available description object!
 #&gt; You can switch off this check by using configureMlr!
 </code></pre>
 
@@ -346,17 +349,17 @@ The following example shows how to prevent this:</p>
 train(&quot;classif.qda&quot;, task = iris.task, subset = 1:104)
 </code></pre>
 
-<pre><code>#&gt; Error in qda.default(x, grouping, ...): some group is too small for 'qda'
+<pre><code>#&gt; Error: some group is too small for 'qda'
 </code></pre>
 
-<pre><code>#&gt; Timing stopped at: 0.005 0 0.005
+<pre><code>#&gt; Timing stopped at: 0.006 0 0.006
 </code></pre>
 
 <pre><code class="r">configureMlr(on.learner.error = &quot;warn&quot;)
 mod = train(&quot;classif.qda&quot;, task = iris.task, subset = 1:104)
 </code></pre>
 
-<pre><code>#&gt; Warning in train(&quot;classif.qda&quot;, task = iris.task, subset = 1:104): Could not train learner classif.qda: Error in qda.default(x, grouping, ...) : 
+<pre><code>#&gt; Warning: Could not train learner classif.qda: Error in qda.default(x, grouping, ...) : 
 #&gt;   some group is too small for 'qda'
 </code></pre>
 
