--- a/tutorial/html/integrated_learners/index.html
+++ b/tutorial/html/integrated_learners/index.html
@@ -295,6 +295,17 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="left">'use_missing_data' has been set to TRUE by default to allow missing data support</td>
 </tr>
 <tr>
+<td align="left"><strong>classif.binomial</strong> <br />binomial</td>
+<td align="left">Binomial Regression</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/stats/">stats</a></td>
+<td align="center">X</td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="center">X</td>
+<td align="right">prob<br />twoclass</td>
+<td align="left">Delegates to glm with freely choosable binomial link function via learner param 'link'.</td>
+</tr>
+<tr>
 <td align="left"><strong>classif.blackboost</strong> <br />blackbst</td>
 <td align="left">Gradient Boosting With Regression Trees</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/mboost/">mboost</a><br /><a href="http://www.rdocumentation.org/packages/party/">party</a></td>
@@ -468,7 +479,7 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="center"></td>
 <td align="center"></td>
 <td align="right">multiclass<br />prob<br />twoclass</td>
-<td align="left"></td>
+<td align="left">Learner param 'predict.method' maps to 'method' in predict.lda.</td>
 </tr>
 <tr>
 <td align="left"><strong>classif.LiblineaRBinary</strong> <br />liblinearbinary</td>
@@ -523,7 +534,7 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="center"></td>
 <td align="center">X</td>
 <td align="right">prob<br />twoclass</td>
-<td align="left"></td>
+<td align="left">Delegates to glm with family binomial/logit.</td>
 </tr>
 <tr>
 <td align="left"><strong>classif.lqa</strong> <br />lqa</td>
@@ -658,6 +669,17 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="left"></td>
 </tr>
 <tr>
+<td align="left"><strong>classif.probit</strong> <br />probit</td>
+<td align="left">Probit Regression</td>
+<td align="left"><a href="http://www.rdocumentation.org/packages/stats/">stats</a></td>
+<td align="center">X</td>
+<td align="center">X</td>
+<td align="center"></td>
+<td align="center">X</td>
+<td align="right">prob<br />twoclass</td>
+<td align="left">Delegates to glm with family binomial/probit.</td>
+</tr>
+<tr>
 <td align="left"><strong>classif.qda</strong> <br />qda</td>
 <td align="left">Quadratic Discriminant Analysis</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/MASS/">MASS</a></td>
@@ -666,7 +688,7 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="center"></td>
 <td align="center"></td>
 <td align="right">multiclass<br />prob<br />twoclass</td>
-<td align="left"></td>
+<td align="left">Learner param 'predict.method' maps to 'method' in predict.lda.</td>
 </tr>
 <tr>
 <td align="left"><strong>classif.quaDA</strong> <br />quada</td>
@@ -756,17 +778,6 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="right">multiclass<br />prob<br />twoclass</td>
 <td align="left"></td>
 </tr>
-<tr>
-<td align="left"><strong>classif.xgboost</strong> <br />xgb</td>
-<td align="left">eXtreme Gradient Boosting</td>
-<td align="left"><a href="http://www.rdocumentation.org/packages/xgboost/">xgboost</a></td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="right">multiclass<br />prob<br />twoclass</td>
-<td align="left"><code>nround</code> should be set to value higher then 1 for more accuracy. Mulitclass will use <code>objective = 'multi:softmax'</code>. Binaryclass will use <code>objective = 'binary:logistic'</code>.</td>
-</tr>
 </tbody>
 </table>
 <h3 id="regression">Regression</h3>
@@ -852,17 +863,6 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="left"></td>
 </tr>
 <tr>
-<td align="left"><strong>regr.elmNN</strong> <br />elmNN</td>
-<td align="left">Extreme Learning Machine for Single Hidden Layer Feedforward Neural Networks</td>
-<td align="left"><a href="http://www.rdocumentation.org/packages/elmNN/">elmNN</a></td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="right"></td>
-<td align="left">nhid has been set to 1 and actfun has been set to "sig" by default</td>
-</tr>
-<tr>
 <td align="left"><strong>regr.fnn</strong> <br />fnn</td>
 <td align="left">Fast k-Nearest Neighbor</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/FNN/">FNN</a></td>
@@ -926,7 +926,7 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="center"></td>
 <td align="center"></td>
 <td align="right">se</td>
-<td align="left">In predict, we currently always use type = 'SK'.</td>
+<td align="left">In predict, we currently always use type = 'SK'. The extra param 'jitter' (default is FALSE) enables adding a very small jitter (order 1e-12) to the x-values before prediction, as predict.km reproduces the exact y-values of the training data points, when you pass them in, even if the nugget effect is turned on.</td>
 </tr>
 <tr>
 <td align="left"><strong>regr.ksvm</strong> <br />ksvm</td>
@@ -963,7 +963,7 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 </tr>
 <tr>
 <td align="left"><strong>regr.mob</strong> <br />mob</td>
-<td align="left">Model-based Recursive Partitioning  Yielding a Tree with Fitted Models Associated with each Terminal Node</td>
+<td align="left">Model-based Recursive Partitioning Yielding a Tree with Fitted Models Associated with each Terminal Node</td>
 <td align="left"><a href="http://www.rdocumentation.org/packages/party/">party</a></td>
 <td align="center">X</td>
 <td align="center">X</td>
@@ -1080,7 +1080,7 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="center"></td>
 <td align="center"></td>
 <td align="right"></td>
-<td align="left">Kernel parameters have to be passed directly and not by using the kpar list in rvm.   Note that <code>fit</code> has been set to <code>FALSE</code> by default for speed.</td>
+<td align="left">Kernel parameters have to be passed directly and not by using the kpar list in rvm.  Note that <code>fit</code> has been set to <code>FALSE</code> by default for speed.</td>
 </tr>
 <tr>
 <td align="left"><strong>regr.svm</strong> <br />svm</td>
@@ -1092,17 +1092,6 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="center"></td>
 <td align="right"></td>
 <td align="left"></td>
-</tr>
-<tr>
-<td align="left"><strong>regr.xgboost</strong> <br />xgb</td>
-<td align="left">eXtreme Gradient Boosting</td>
-<td align="left"><a href="http://www.rdocumentation.org/packages/xgboost/">xgboost</a></td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="right"></td>
-<td align="left"><code>nround</code> should be set to value higher then 1 for more accuracy. <code>objective = 'multireg:linear'</code> set automatically for regression.</td>
 </tr>
 </tbody>
 </table>
@@ -1260,17 +1249,6 @@ For <em>regression</em>, <em>se</em> means that standard errors and the mean res
 <td align="center"></td>
 <td align="right">prob</td>
 <td align="left">The 'predict' method uses 'cl_predict' from the 'clue' package to compute the cluster memberships for new data. The default 'centers=2' is added so the method runs without setting params, but this must in reality of course be changed by the user.</td>
-</tr>
-<tr>
-<td align="left"><strong>cluster.DBScan</strong> <br />dbscan</td>
-<td align="left">DBScan Clustering</td>
-<td align="left"><a href="http://www.rdocumentation.org/packages/RWeka/">RWeka</a></td>
-<td align="center">X</td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="center"></td>
-<td align="right"></td>
-<td align="left">You might have to install the Weka package: WPM('install-package', 'optics_dbScan')</td>
 </tr>
 <tr>
 <td align="left"><strong>cluster.EM</strong> <br />em</td>
